<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvReward"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#419ea6"
    app:cardCornerRadius="8dp"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLineOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reward"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLineTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rupee"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvLineOne" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLineThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_account"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvLineTwo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>