<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    app:cardBackgroundColor="#1a8a95"
    app:cardCornerRadius="25dp"
    app:layout_constraintTop_toTopOf="parent"
    app:strokeColor="#027e8b"
    app:strokeWidth="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRupees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/amt"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvBalance"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/available_balance"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRupees" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civPoint"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_point_30"
            app:layout_constraintStart_toStartOf="@+id/tvBalance"
            app:layout_constraintTop_toBottomOf="@+id/tvBalance"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPointCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_505"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvReward"
            app:layout_constraintStart_toEndOf="@+id/civPoint"
            app:layout_constraintTop_toBottomOf="@+id/tvBalance" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvReward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/reward_points"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/civPoint" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/transfer_money"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>